// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Host Summary Component #getEuiDescriptionList All item in description list are loading 1`] = `
<div>
  <dl
    class="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed"
  >
    <dt
      class="euiDescriptionList__title"
    >
      Name
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      First Seen
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Last Seen
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Id
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      IP Address
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      MAC Addr
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Type
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Platform
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      OS Name
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Family
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Version
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Architecture
    </dt>
    <div>
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
  </dl>
</div>
`;

exports[`Host Summary Component #getEuiDescriptionList if IP is an empty list in description list 1`] = `
<div>
  <dl
    class="euiDescriptionList euiDescriptionList--column euiDescriptionList--compressed"
  >
    <dt
      class="euiDescriptionList__title"
    >
      Name
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              siem-kibana
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      First Seen
    </dt>
    <div>
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-describedby="firstLastSeenError-siem-kibana-first-seen"
          class="euiIcon euiIcon--medium"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.59 10.059L7.35 5.18h1.3L8.4 10.06h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184zM2 14a1 1 0 0 1-.878-1.479l6-11a1 1 0 0 1 1.756 0l6 11A1 1 0 0 1 14 14H2zm0-1h12L8 2 2 13z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Last Seen
    </dt>
    <div>
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-describedby="firstLastSeenError-siem-kibana-last-seen"
          class="euiIcon euiIcon--medium"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.59 10.059L7.35 5.18h1.3L8.4 10.06h-.81zm.394 1.901a.61.61 0 0 1-.448-.186.606.606 0 0 1-.186-.444c0-.174.062-.323.186-.446a.614.614 0 0 1 .448-.184c.169 0 .315.06.44.182.124.122.186.27.186.448a.6.6 0 0 1-.189.446.607.607 0 0 1-.437.184zM2 14a1 1 0 0 1-.878-1.479l6-11a1 1 0 0 1 1.756 0l6 11A1 1 0 0 1 14 14H2zm0-1h12L8 2 2 13z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Id
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              aa7ca589f1b8220002f2fc61c64cfbf1
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      IP Address
    </dt>
    <div>
      --
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      MAC Addr
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              42:01:0a:8e:00:07
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Type
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              projects/189716325846/machineTypes/n1-standard-1
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Platform
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              debian
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      OS Name
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              Debian GNU/Linux
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Family
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              debian
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Version
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              9 (stretch)
            </div>
          </div>
        </div>
      </div>
    </div>
    <dt
      class="euiDescriptionList__title"
    >
      Architecture
    </dt>
    <div>
      <div
        data-test-subj="draggableWrapperDiv"
      >
        <div
          data-react-beautiful-dnd-droppable="6"
        >
          <div
            aria-roledescription="Draggable item. Press space bar to lift"
            class="sc-kkGfuU ggQetF"
            data-react-beautiful-dnd-drag-handle="6"
            data-react-beautiful-dnd-draggable="6"
            data-test-subj="providerContainer"
            draggable="false"
            style="z-index: 9000;"
            tabindex="0"
          >
            <div
              class="euiText euiText--small"
              data-test-subj="draggable-content"
            >
              x86_64
            </div>
          </div>
        </div>
      </div>
    </div>
  </dl>
</div>
`;

exports[`Host Summary Component rendering it renders the default Host Summary 1`] = `
<Component>
  <pure(Component)
    data={
      Object {
        "_id": "yneHlmgBjVl2VqDlAjPR",
        "host": Object {
          "architecture": "x86_64",
          "id": "aa7ca589f1b8220002f2fc61c64cfbf1",
          "ip": Array [
            "10.142.0.7",
            "fe80::4001:aff:fe8e:7",
          ],
          "mac": Array [
            "42:01:0a:8e:00:07",
          ],
          "name": "siem-kibana",
          "os": Object {
            "family": "debian",
            "name": "Debian GNU/Linux",
            "platform": "debian",
            "version": "9 (stretch)",
          },
          "type": "projects/189716325846/machineTypes/n1-standard-1",
        },
      }
    }
    loading={false}
  />
</Component>
`;
